--- a/ClientApp/src/main/resources/application.properties
+++ b/ClientApp/src/main/resources/application.properties
@@ -6,7 +6,7 @@ app.db_url = https://coms4156-app-f6683-default-rtdb.firebaseio.com
 app.serviceAccountKey_path = coms4156-app-f6683-firebase-adminsdk-4cada-336a283f1c.json
 app.SECRET_KEY = testtestkey
 api.SECRET_KEY= testtestkey
-
+spring.resources.static-locations=classpath:/static/,classpath:/public/
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
