--- a/ClientApp/pom.xml
+++ b/ClientApp/pom.xml
@@ -82,6 +82,11 @@
       <artifactId>jaxb-api</artifactId>
       <version>2.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.15.2</version> <!-- Use the latest version -->
+    </dependency>
   </dependencies>
 
   <build>
