--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,9 @@ jobs:
   build:
 
     runs-on: windows-latest
+    defaults:
+      run:
+        working-directory: ClientApp
 
     steps:
     - name: Checkout code
